src/components/SinglePriceGrid.css
.single-price-grid {
  margin-top: 2.5%;
  /* margin-bottom: 5%; */

  border-radius: var(--ten-units);

  margin-inline: auto;
  width: 90%;
  font-size: var(--fs-regular);
  box-shadow: 0px 2px 82px -11px rgba(0, 0, 0, 0.75);

  display: grid;
  grid-template: 1fr 1fr 1fr / 1fr;
  grid-template-areas:
    "header"
    "price"
    "why-us";
}

.header {
  background-color: #fff;
  border-top-right-radius: var(--ten-units);
  border-top-left-radius: var(--ten-units);

  grid-area: header;
  display: grid;
  grid-template: 0.5fr 0.5fr 1fr / 1fr;
}

.header__title {
  color: var(--fc-teal-500);
  font-weight: var(--fw-bold);
  font-size: 1.5em;
}

.header__sub_title {
  color: var(--lime-700);
  font-weight: var(--fw-bold);
  font-size: 1.25em;
}

.header__paragraph {
  color: var(--fc-green-500);
  font-weight: var(--fw-regular);
  font-size: var(--fs-regular);
}

.sign-up {
  background-color: var(--fc-teal-500-darker);
  color: #fff;

  border-bottom-right-radius: 0rem;

  grid-area: price;
  display: grid;
}

.sign-up__heading {
  font-size: var(--fs-sub-heading);
}

.sign-up__pricing > * {
  vertical-align: middle;
}

.sign-up__pricing-cost {
  display: inline-block;
  font-size: 2em;
}

.sign-up__pricing-month {
  color: var(--fc-teal-100);
}

.sign-up__description {
  font-weight: var(--fw-regular);
  font-size: var(--fs-regular);
}

.sign-up__button {
  background-color: var(--lime-300);
  font-weight: var(--fw-bold);
  color: var(--lime-700);
  border: none;
  width: 100%;
  padding: var(--ten-units);
  border-radius: var(--ten-units);
  font-size: var(--fs-regular);

  &:focus-visible {
    box-shadow: 0px 2px 82px -11px rgba(0, 0, 0, 0.75);

    outline-style: double;
  }
}

.why-us {
  background-color: var(--fc-teal-500);
  border-bottom-left-radius: var(--ten-units);
  border-bottom-right-radius: var(--ten-units);
  color: #fff;

  grid-area: why-us;
  display: grid;
  align-items: center;
  align-content: center;
}

.why-us__heading {
  font-size: var(--fs-sub-heading);
}

.why-us__description {
  font-weight: var(--fw-regular);
  font-size: var(--fs-regular);
  padding: 0rem;
  list-style-type: none;
}

.section_container {
  min-height: auto;
  padding: var(--ten-units);
  gap: var(--ten-units);
}

/* Small tablets and larger mobile devices (481px - 768px) */
@media (min-width: 481px) {
  .single-price-grid {
    width: 80%;
  }

  .section_container {
    min-height: auto;
    padding: var(--fourty-units);
    gap: var(--twenty-units);
  }
}

/* Tablets and small laptops (769px - 1024px) */
@media (min-width: 769px) {
  .single-price-grid {
    width: 70%;
    grid-template: 1fr 1fr / 1fr 1fr;
    grid-template-areas:
      "header header"
      "price why-us";
  }
  .why-us {
    border-bottom-left-radius: 0rem;
  }

  .sign-up {
    border-bottom-left-radius: var(--ten-units);
  }
}

/* Large desktops and high-resolution screens (1025px and up) */
@media (min-width: 1025px) {
  .single-price-grid {
    width: 60%;
  }
}

